Update user route, airplane child classes, filtered by weight verifier, FlightQueryBuilder